# gainwill_genie_app

./: .gitignore  README.md  build-deploy-run.sh  databricks.yml
docs/: APP_SCOPES.md
resources/: gainwell_genie_app.app.yml  generate_synthetic_plandata.job.yml
scripts/: README.md  generate_synthetic_plandata.py
src/app/: .gitignore  README.md  app.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
src/app/gainwell_genie_app/: __init__.py  _metadata.py
src/app/gainwell_genie_app/__dist__/: index.html
src/app/gainwell_genie_app/__dist__/assets/: api-Cw-I1fGx.js  api-D8tYLqVJ.js  badge-BGQA6l5w.js  badge-CHKfXRgz.js  button-B83e1NL2.js  button-ZNqFvPe-.js  chat-Bjplvcpd.js  chat-CV8zUnmV.js  index-CXM2JdRj.js  index-CsLqgHPg.css  index-Ct1VwyzL.js  index-DOJ9rBHy.css  index-DoE3Y91Z.js  index-_FWC9Saa.js  input-DIm6JfhO.js  input-DsavT3Vm.js  logo-Bikteq-F.js  logo-DN7FRzu1.js  message-circle-DHDhTTby.js  message-circle-rBYM-LMZ.js  profile-crFzGkbc.js  profile-luOC3jgr.js  route-4FkQG22r.js  route-Dm7a_t9i.js  selector-DE22V9zc.js  selector-DhnQN9BW.js  user-Cnn5DItZ.js  user-IfWhVGXI.js
src/app/gainwell_genie_app/backend/: app.py  config.py  dependencies.py  genie_client.py  logger.py  models.py  router.py  runtime.py  utils.py
